build/log/idf_py_stderr_output_193930
In file included from /home/pi/wifiRelay_2/main/wifiRelay.c:5:
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'setup_page_post_handler':
/home/pi/wifiRelay_2/main/wifiRelay.c:584:71: error: 'wifi_passwd' undeclared (first use in this function); did you mean 'wifi_pass'?
  584 |         ESP_LOGI(TAG, "saved: wifi_ssid:%s,wifi_passwd:%s", wifi_ssid,wifi_passwd);
      |                                                                       ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:584:9: note: in expansion of macro 'ESP_LOGI'
  584 |         ESP_LOGI(TAG, "saved: wifi_ssid:%s,wifi_passwd:%s", wifi_ssid,wifi_passwd);
      |         ^~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:584:71: note: each undeclared identifier is reported only once for each function it appears in
  584 |         ESP_LOGI(TAG, "saved: wifi_ssid:%s,wifi_passwd:%s", wifi_ssid,wifi_passwd);
      |                                                                       ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:584:9: note: in expansion of macro 'ESP_LOGI'
  584 |         ESP_LOGI(TAG, "saved: wifi_ssid:%s,wifi_passwd:%s", wifi_ssid,wifi_passwd);
      |         ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
